Fix dark mode background color
Update dark mode switcher to change background color

* Update `global.css` to include dark mode and light mode background color changes for `html` and `body` elements
* Update `pages/index.js` to toggle the dark mode class on the `html` and `body` elements, changing the background color accordingly
* Remove the background color setting for the `.main` class in `styles/home.module.css` to allow the global styles to take effect

--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -7,7 +7,6 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: #d2b48c; /* tan */
 }
 
 .hr {
